# gamebuilder2d

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  config.json  wm_services.diff  wm_services_h.diff
GameBuilder2d/: CMakeLists.txt  GameBuilder2d.cpp  GameBuilder2d.h  README.md
GameBuilder2d/docs/: audio-manager-window.md  audio-manager.md  configuration-manager.md  configuration-window-developer.md  hotkey-manager-developer.md  hotkey-manager.md  log-manager.md  texture-manager.md  window-manager.md
GameBuilder2d/include/gb2d/interop/: gb2d_interop.h  gb2d_logging_api.h  gb2d_status_codes.h  gb2d_window_api.h  utf8_validation.h
GameBuilder2d/src/: GameBuilder2d.cpp  GameBuilder2d.h
GameBuilder2d/src/bridge/: gb2d_interop.cpp  gb2d_logging_api.cpp  gb2d_script_manager.cpp  gb2d_script_manager.h  gb2d_status_codes.cpp  gb2d_window_api.cpp  utf8_validation.cpp
GameBuilder2d/src/games/: Galaga.cpp  Galaga.h  HarrierAttack.cpp  HarrierAttack.h  PacMan.cpp  PacMan.h  PlarformerGame.cpp  PlarformerGame.h  SpaceInvaders.cpp  SpaceInvaders.h
GameBuilder2d/src/services/audio/: AudioManager.cpp  AudioManager.h
GameBuilder2d/src/services/configuration/: ConfigurationEditorState.cpp  ConfigurationEditorState.h  ConfigurationKeyCanonicalization.h  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationSchema.cpp  ConfigurationSchema.h  json_io.cpp  json_io.h  logging.cpp  logging.h  paths.cpp  paths.h  validate.cpp  validate.h
GameBuilder2d/src/services/hotkey/: HotKeyActions.h  HotKeyCatalog.cpp  HotKeyCatalog.h  HotKeyManager.cpp  HotKeyManager.h  HotKeyRegistrationBuilder.cpp  HotKeyRegistrationBuilder.h  ShortcutUtils.cpp  ShortcutUtils.h
GameBuilder2d/src/services/logger/: ImGuiLogSink.cpp  ImGuiLogSink.h  LogManager.cpp  LogManager.h
GameBuilder2d/src/services/texture/: TextureManager.cpp  TextureManager.h
GameBuilder2d/src/services/window/: Layout.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
GameBuilder2d/src/ui/: FullscreenSession.cpp  FullscreenSession.h  ImGuiTextureHelpers.h  Window.h  WindowContext.h  WindowRegistry.cpp  WindowRegistry.h
GameBuilder2d/src/ui/ImGuiAuto/: ImGuiAuto.cpp  ImGuiAuto.h  ImGuiAuto.inl  ImGuiAutoDemo.cpp  ImGuiAutoDemo.h  ImGuiAutoImpl.cpp
GameBuilder2d/src/ui/Windows/: AudioManagerWindow.cpp  AudioManagerWindow.h  CodeEditorWindow.cpp  CodeEditorWindow.h  ConfigurationWindow.cpp  ConfigurationWindow.h  ConsoleLogWindow.cpp  ConsoleLogWindow.h  FilePreviewWindow.cpp  FilePreviewWindow.h  GameWindow.cpp  GameWindow.h  HotkeysWindow.cpp  HotkeysWindow.h  SpaceInvadersWindow.cpp  SpaceInvadersWindow.h
GameBuilder2d/src/ui/Windows/Games/: Galaga.cpp  Galaga.h  Game.h  HarrierAttack.cpp  HarrierAttack.h  PacMan.cpp  PacMan.h  PlarformerGame.h  SpaceInvaders.cpp  SpaceInvaders.h
GameBuilder2d/src/window/: DockRegion.cpp  DockRegion.h  Layout.cpp  README.md  WindowManager.cpp
RunTime2d/: CMakeLists.txt  main.cpp
RunTime2d/src/: main.cpp
RunTime2dPSP/: CMakeLists.txt  exports.exp
RunTime2dPSP/src/: main.c
assets/textures/atlases/: toolbaricons.json
build-vs-2022-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GameBuilder2d.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-vs-2022-x64/GameBuilder2d/: GameBuilder2d.vcxproj  GameBuilder2d.vcxproj.filters  cmake_install.cmake
cmake/toolchains/: psp.cmake
specs/001-windowmanager-will-be/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-windowmanager-will-be/contracts/: window-manager-contract.md
specs/002-feature-texturemanager-that/: spec.md
specs/003-logmanager-to-wrap/: spec.md
specs/004-configurationmanager-to-handle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-configurationmanager-to-handle/contracts/: configuration_manager.md
specs/005-ImGuiSink-TextEdit/: spec.md  tasks.md
specs/006-WindowManagerRefactor/: data-model.md  plan.md  spec.md  tasks.md
specs/006-WindowManagerRefactor/contracts/: window-interfaces.md
specs/006-embed-dotnet-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-embed-dotnet-runtime/contracts/: interop_status_codes.md  logging_interop.md  window_interop.md
specs/007-gamewindow-fullscreen-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-gamewindow-fullscreen-mode/contracts/: FullscreenSession.md
specs/008-texture-manager-service/: plan.md  spec.md  tasks.md
specs/009-audio-manager-service/: plan.md  spec.md  tasks.md
specs/010-hotkey-manager-service/: plan.md  spec.md  tasks.md
specs/011-configuration-manager-window/: plan.md  spec.md  tasks.md
specs/012-audio-manager-window/: plan.md  spec.md  tasks.md
specs/013-texture-atlas-support-in-texturemanager/: plan.md  spec.md  tasks.md
tests/: CMakeLists.txt  interop_test_helpers.h  test_bootstrap.cpp
tests/contract/: test_logging_basic.cpp  test_not_initialized.cpp  test_script_duplicate.cpp  test_status_codes.cpp  test_window_basic.cpp  test_window_title_validation.cpp
tests/integration/: test_config_e2e.cpp  test_config_window_ui.cpp  test_logging_counters.cpp  test_reload_debounce.cpp  test_reload_debounce_zero.cpp  test_reload_isolation.cpp  test_texture_atlas_integration.cpp  test_unload_race.cpp  test_window_lifecycle.cpp  test_window_multi_close.cpp
tests/unit/: test_dynamic_max_contexts.cpp  test_max_contexts.cpp  test_utf8_validation.cpp  test_window_invalid_id.cpp
tests/unit/audio/: test_audio_manager_playback.cpp
tests/unit/config/: test_apply_save_runtime.cpp  test_atomic_save.cpp  test_boundaries.cpp  test_change_notifications.cpp  test_corrupt_fallback.cpp  test_editor_state.cpp  test_env_overrides.cpp  test_export.cpp  test_load_defaults.cpp  test_load_valid.cpp  test_placeholder.cpp  test_save_reload.cpp  test_validate.cpp
tests/unit/texture/: test_texture_manager.cpp
tests/unit/windows/: test_audio_manager_window.cpp  test_window_json_roundtrip.cpp
(+24 files in other folders)
